FEATURE: Added functionality for contact page, pending email sending

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -280,6 +280,9 @@
 	"CONTACT": {
 		"TITLE": "Contact",
 		"SUBTITLE": "Complete the following information, we will contact you shortly.",
+    "DESTINATION": "Send to",
+    "ADMINISTRATION": "Administration",
+    "COURSES": "Courses",
 		"NAME": "Name",
 		"NAME_ERROR": "Please enter your name",
 		"EMAIL": "Email",
