Added i18n and navbar for Login

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -306,6 +306,11 @@
 	},
 	"LOGIN": {
 		"TITLE": "Log In",
+    "EMAIL": "Email",
+    "PASSWORD": "Password",
+    "BUTTON": "Log In",
+    "NO_ACCOUNT": "Don't have an account?",
+    "SIGN_UP": "Sign Up",
 		"FORGOT_PASSWORD": "Forgot your password?",
 		"CLICK": "Recover Password"
 	},
