--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -260,7 +260,7 @@
     "ENROLLBUTTON": "¡Anotate ahora!",
 	"TESTBUTTON": "Empezar el examen",
     "CONTENT_TITLE": "Contenido",
-    "CONTENT_DESC": "El curso consiste de 2 clases cubriendo los siguientes temas",
+    "CONTENT_DESC": "El curso consiste de 2 clases cubriendo los siguientes temas, para acceder a los contenidos de las clases y los solucionarios puedes hacer click en el boton correspondiente.",
     "TITLE": "Curso de Análisis de Datos en Python",
     "FAQ": {
       "TITLE": "Preguntas Frecuentes",
