--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -247,7 +247,8 @@
         "M3": "Customization of plots and graphs",
         "M4": "Application cases"
       },
-      "TITLE": "Class "
+      "TITLE": "Class ",
+      "BUTTON": "GO TO CLASS"
     },
 	"SOLUTION": "Solutionary",
     "DESC_TITLE": "Description",
@@ -255,6 +256,7 @@
     "FORMAT_SUBTITLE":"Course format",
     "FORMAT": "The classes on this course consist of text and video explanations, with the addition of interactive challenges to solve. There will be a week between classes to read and solve these challenges, while being able to chat with us and the rest of the participants using Discord. In addition to this, we will have weekly livestreams to answer your questions.",
     "ENROLLBUTTON": "Enroll now!",
+    "SOLUTIONBUTTON": "GO TO SOLUTIONS",
 	"TESTBUTTON": "Start Test",
     "CONTENT_TITLE": "Course contents",
     "CONTENT_DESC": "The course consists of 2 classes covering the following topics, to access the contents of the classes and the solutions you can click on the corresponding button.",
