--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -250,7 +250,8 @@
         "M3": "Personalización de los gráficos",
         "M4": "Casos de aplicación"
       },
-      "TITLE": "Clase "
+      "TITLE": "Clase ",
+      "BUTTON": "IR A LA CLASE"
     },
 	"SOLUTION": "Solucionario",
     "DESC_TITLE": "Descripción",
@@ -258,6 +259,7 @@
     "FORMAT_SUBTITLE":"Formato del curso",
     "FORMAT": "Las clases del curso consisten en videos y textos explicativos, intercalados con desafíos interactivos para resolver. Tendrán una semana entre clase y clase para mirar, leer y resolver los desafíos, pudiendo conversar con nosotros y con los demás participantes mediante Discord. Además, haremos livestreams semanales para poder responder todas sus consultas.",
     "ENROLLBUTTON": "¡Anotate ahora!",
+    "SOLUTIONBUTTON": "IR A LAS SOLUCIONES",
 	"TESTBUTTON": "Empezar el examen",
     "CONTENT_TITLE": "Contenido",
     "CONTENT_DESC": "El curso consiste de 2 clases cubriendo los siguientes temas, para acceder a los contenidos de las clases y los solucionarios puedes hacer click en el boton correspondiente.",
