homepage sponsors section now uses i18n...
and added a year at the end, this is only temporal until the current year's sponsors have been confirmed

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -91,6 +91,7 @@
 			"TITLE": "IEEE News",
 			"CONTENT": "Find out the latest technological and scientific news!"
 		},
+		"SPONSORS": "Sponsors 2021",
     "BITCUP": {
       "TEXT": "The Bit Cup is an open and free programming competition organized by IEEE ITBA. Due to its varied difficulty, you can use it as an introduction to the world of competitive programming.",
       "TITLE": "Bit Cup"
