--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -90,6 +90,7 @@
 			"TITLE": "Noticias IEEE",
 			"CONTENT": "¡Enterate de las últimas noticias científicas y tecnológicas!"
 		},
+		"SPONSORS": "Sponsors 2021",
 		"CLASSES": {
 			"TEXT": "La programación es una habilidad que no discrimina profesiones y su dominio puede enriquecer a cualquier persona. Nuestros cursos de Python, ya sean introductorios o no, están orientados a estudiantes, profesionales e interesados de distintas especialidades y a todo aquel que lo necesite o le encuentre valor.",
 			"TITLE": "Cursos de Python"
