--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -102,7 +102,7 @@
     },
     "CLASSES": {
       "TEXT": "Programming is an ability that doesn't discriminate professions and dominating them can be enriching for anyone. Our Python courses, both introductory and advanced, are oriented to students, professionals and anybody that is interested no matter which specialization they come from.",
-      "TITLE": "Python Courses"
+      "TITLE": "Introductory Python Course"
     },
     "COMISIONS": {
       "DC": "DC",
@@ -241,6 +241,31 @@
       }
     }
   },
+  "TYC":{
+    "TITLE":"Términos y Condiciones",
+    "SUBTITLES":{
+      "1":{
+        "TITLE":"Políticas de no Discriminación",
+        "TEXT":"Se prohíbe toda conducta que presente discriminación o acoso hacia cualquier persona por cualquier razón. Ejemplos se encuentran más detallados en la política de IEEE." 
+      },
+      "2":{
+        "TITLE":"Conducta durante el Evento y Seguridad",
+        "TEXT":"IEEE ITBA está comprometido a brindar un ambiente seguro y productivo a todos sus participantes. IEEE ITBA no tolerará conductas de discriminación y acoso en cualquiera de sus eventos relacionados. Se espera que todos los participantes se adhieran a estos principios y respeten los derechos de otros.\nSi usted es víctima o testigo de cualquier comportamiento no acorde a estos Términos y Condiciones debe reportarlo durante la duración del evento. Personal del Evento atenderá sus preocupaciones durante la duración del evento." 
+      },
+      "3":{
+        "TITLE":"Uso de material de Video y Fotográfico tomado durante un evento IEEE",
+        "TEXT":"Tal como se describe en la respectiva sección de los Términos y Condiciones de Eventos de IEEE." 
+      },
+      "4":{
+        "TITLE":"Uso de Información de Participantes",
+        "TEXT":"IEEE ITBA se reserva el derecho de usar la información de contacto provista por los participantes al momento de inscripción con empresas que han colaborado para la realización de las actividades organizadas por el capítulo estudiantil IEEE ITBA." 
+      },
+      "5":{
+        "TITLE":"IEEExtreme",
+        "TEXT":"Aplican todas las Reglas, Términos y Condiciones de la correspondiente edición del IEEExtreme al que se inscriba. Se recuerda utilizar nombres de equipos sensibles que no violen los términos y condiciones establecidos por IEEE.\nDurante la duración de la IEEExtreme no se autorizará la comunicación privada directa entre participantes de diferentes equipos sin autorización explícita en la sala de conversación pública entre las partes involucradas.\nToda comunicación entre individuos o equipos durante la duración del evento debe respetar los Términos y Condiciones previamente dispuestos.\nEl uso de cualquier herramienta que viole los Términos y Condiciones del evento está expresamente prohibido.\nSi un miembro del personal del evento considera que hay una violación de estos Términos y Condiciones, el/la infractor/a será advertido. Si el comportamiento persiste, IEEE ITBA se reserva el derecho de expulsar a tal participante del evento." 
+      }
+  }
+},
   "DATAANALYSIS": {
     "CLASSES": {
       "C1": {
