--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -94,7 +94,7 @@
     "SPONSORS": "Sponsors 2021",
     "CLASSES": {
       "TEXT": "La programación es una habilidad que no discrimina profesiones y su dominio puede enriquecer a cualquier persona. Nuestros cursos de Python, ya sean introductorios o no, están orientados a estudiantes, profesionales e interesados de distintas especialidades y a todo aquel que lo necesite o le encuentre valor.",
-      "TITLE": "Cursos de Python"
+      "TITLE": "Curso Introductorio de Python"
     },
     "DATAANALYSIS": {
       "TEXT": "Gracias al pack de opciones gráficas disponibles, acompañado de herramientas de visualización que facilitan el acceso a los datos, Python es el lenguaje de programación preferido entre tanto los científicos de datos como los analistas de datos. Con nuestro curso aprenderás a usar algunas de estas herramientas, sólo necesitando un conocimiento básico de python como base.",
@@ -245,6 +245,31 @@
       }
     }
   },
+  "TYC":{
+    "TITLE":"Términos y Condiciones",
+    "SUBTITLES":{
+      "1":{
+        "TITLE":"Políticas de no Discriminación",
+        "TEXT":"Se prohíbe toda conducta que presente discriminación o acoso hacia cualquier persona por cualquier razón. Ejemplos se encuentran más detallados en la política de IEEE." 
+      },
+      "2":{
+        "TITLE":"Conducta durante el Evento y Seguridad",
+        "TEXT":"IEEE ITBA está comprometido a brindar un ambiente seguro y productivo a todos sus participantes. IEEE ITBA no tolerará conductas de discriminación y acoso en cualquiera de sus eventos relacionados. Se espera que todos los participantes se adhieran a estos principios y respeten los derechos de otros.\nSi usted es víctima o testigo de cualquier comportamiento no acorde a estos Términos y Condiciones debe reportarlo durante la duración del evento. Personal del Evento atenderá sus preocupaciones durante la duración del evento." 
+      },
+      "3":{
+        "TITLE":"Uso de material de Video y Fotográfico tomado durante un evento IEEE",
+        "TEXT":"Tal como se describe en la respectiva sección de los Términos y Condiciones de Eventos de IEEE." 
+      },
+      "4":{
+        "TITLE":"Uso de Información de Participantes",
+        "TEXT":"IEEE ITBA se reserva el derecho de usar la información de contacto provista por los participantes al momento de inscripción con empresas que han colaborado para la realización de las actividades organizadas por el capítulo estudiantil IEEE ITBA." 
+      },
+      "5":{
+        "TITLE":"IEEExtreme",
+        "TEXT":"Aplican todas las Reglas, Términos y Condiciones de la correspondiente edición del IEEExtreme al que se inscriba. Se recuerda utilizar nombres de equipos sensibles que no violen los términos y condiciones establecidos por IEEE.\nDurante la duración de la IEEExtreme no se autorizará la comunicación privada directa entre participantes de diferentes equipos sin autorización explícita en la sala de conversación pública entre las partes involucradas.\nToda comunicación entre individuos o equipos durante la duración del evento debe respetar los Términos y Condiciones previamente dispuestos.\nEl uso de cualquier herramienta que viole los Términos y Condiciones del evento está expresamente prohibido.\nSi un miembro del personal del evento considera que hay una violación de estos Términos y Condiciones, el/la infractor/a será advertido. Si el comportamiento persiste, IEEE ITBA se reserva el derecho de expulsar a tal participante del evento." 
+      }
+  }
+},
   "DATAANALYSIS": {
     "CLASSES": {
       "C1": {
