update translation files for ieeextreme

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -172,7 +172,7 @@
     },
     "SPONSORSHIP": {
       "TEXT": "Para el desarrollo de la competencia requerimos fondos, por lo que estamos en la búsqueda de nuevos auspiciantes para nuestro evento. Para más información contactar a cualquier miembro de nuestro equipo de fundraising:",
-      "TITLE": "Sponsors que nos han acompañado"
+      "TITLE": "Sponsors que nos acompañan"
     },
     "TEAM": {
       "TEXT": "La IEEExtreme programming competition es una competencia de programación de 24 hs donde competidores de distintas universidades y carreras dedican gran esfuerzo y motivación en pos de incrementar su habilidad de resolver problemas en equipo y pasar un gran momento.",
