chore (asimov cup): add enroll button & banner

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -373,6 +373,7 @@
   "WIP": "Site under construction",
   "ASIMOVCUP": {
     "TITLE": "Asimov Cup",
+    "ENROLLBUTTON": "Enroll now!",
     "DESC": {
       "TITLE": "Description",
       "SECTION": {
