--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -378,6 +378,7 @@
   "WIP": "Sitio en construcción",
   "ASIMOVCUP": {
     "TITLE": "Asimov Cup",
+    "ENROLLBUTTON": "¡Anotate ahora!",
     "DESC": {
       "TITLE": "Descripción",
       "SECTION": {
