style: i18n on institutional dropdown

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -196,7 +196,7 @@
     "NEWS": "News",
     "SPONSORS": "Sponsors",
     "WRITENEWS": "Create News",
-    "INSTITUTIONAL": "Institucional"
+    "INSTITUTIONAL": "Institutional"
   },
   "PYTHONCOURSES": {
     "CLASSES": {
