css for shorter width + institucional i18n

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -200,7 +200,7 @@
     "NEWS": "Noticias",
     "SPONSORS": "Auspiciantes",
     "WRITENEWS": "Crear Noticia",
-    "INSTITUTIONAL": "Institutional"
+    "INSTITUTIONAL": "Institucional"
   },
   "PYTHONCOURSES": {
     "CLASSES": {
