feat: add new carousel + hrefs to page links are now routerLinks

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -89,7 +89,7 @@
     },
     "IEEENEWS": {
       "TITLE": "Noticias IEEE",
-      "CONTENT": "¡Enterate de las últimas noticias científicas y tecnológicas!"
+      "CONTENT": "¡Entérate de las últimas noticias científicas y tecnológicas!"
     },
     "SPONSORS": "Sponsors 2022",
     "CLASSES": {
